kubernetes/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app
  namespace: ecommerce
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-app
  template:
    metadata:
      labels:
        app: ecommerce-app
    spec:
      containers:
      - name: ecommerce-app
        image: dockerhub-user/ecommerce-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
